@@ -399,7 +399,8 @@ class FormattingHelper:
         else:
             for event_ref in person.get_event_ref_list():
                 event = self.dbstate.db.get_event_from_handle(event_ref.ref)
-                if event.get_type() in [RelLib.EventType.CHRISTEN, RelLib.EventType.BAPTISM]:
+                if event.get_type() in [RelLib.EventType.CHRISTEN, RelLib.EventType.BAPTISM] and\
+                   event_ref.get_role() == RelLib.EventRoleType.PRIMARY:
                     birth = event
                     birth_fallback = True
                     break
@@ -412,7 +413,8 @@ class FormattingHelper:
         else:
             for event_ref in person.get_event_ref_list():
                 event = self.dbstate.db.get_event_from_handle(event_ref.ref)
-                if event.get_type() in [RelLib.EventType.BURIAL, RelLib.EventType.CREMATION]:
+                if event.get_type() in [RelLib.EventType.BURIAL, RelLib.EventType.CREMATION] and\
+                   event_ref.get_role() == RelLib.EventRoleType.PRIMARY:
                     death = event
                     death_fallback = True
                     break
